# SuperCub

./: Cargo.toml  README.md
examples/: my_macro.cub  my_macro.expect.c  my_macro.h
src/: builtins.rs  grammar.pest  lib.rs  main.rs  parser.rs  realize.rs
src/builtins/: body.rs  hash.rs  mod.rs  shell.rs  tokenize.rs
src/realize/: decorator.rs  macro_call.rs  variable.rs
