[package]
name = "supercub"
version = "0.0.1"
authors = ["Karim Vergnes <me@thesola.io>"]
description = "C preprocessor"
keywords = [ "c", "c-language", "preprocessor" ]
edition = "2021"

[dependencies]
tree-sitter = "0.24.4"
tree-sitter-c = "0.23.2"
pest = "2.7.14"
pest_derive = "2.7.14"
from-pest = "0.3.2"
pest-ast = "0.3.4"

[[bin]]
name = "cubc"

[[bin]]
name = "cub-pp"
